crates/shipper-lock/src/snapshots/shipper_lock__hardened_tests__lock_info_empty_plan_id.snap
---
source: crates/shipper-lock/src/lib.rs
expression: json
---
{
  "pid": 42,
  "hostname": "snap-host",
  "acquired_at": "2025-01-15T12:00:00Z",
  "plan_id": ""
}
