crates/shipper-lock/src/snapshots/shipper_lock__hardened_tests__lock_info_json_key_order.snap
---
source: crates/shipper-lock/src/lib.rs
expression: json
---
{
  "pid": 1,
  "hostname": "h",
  "acquired_at": "2025-06-01T00:00:00Z",
  "plan_id": "p"
}
